--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
 	"appid": "wx7da6aba6f4fc7bc9",
-	"projectname": "%E4%BA%9A%E7%B1%B3%E7%A7%91%E6%8A%80mall4j",
+	"projectname": "%E5%AE%89%E5%BA%B7%E6%9E%97%E5%AD%A6%E4%BC%9A",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
